fixed font style, question in the ‘Cups section’, alignment of ‘Начать формировать привычку’ label, Extra comma in the greeting text

--- a/src/app/component/auth/components/restore-password/restore-password.component.scss
+++ b/src/app/component/auth/components/restore-password/restore-password.component.scss
@@ -88,7 +88,7 @@ $inputHeight : 48px;
         font-family: $generalFont;
         font-size: 16px;
         line-height: 24px;
-        color: #878787;
+        color: #494A49;
       }
 
       input[type=email]:focus {
@@ -103,7 +103,7 @@ $inputHeight : 48px;
       margin-bottom: 8px;
       margin-top: 40px;
     }
-    
+
     .or-use-google {
       text-align: center;
       font-family: $generalFont;
